# VesperaWorkspace

./: .gitignore  .gitmodules  CMakeLists.txt
OVMF/: OVMF.fd
scripts/: make_disk.sh  make_test_disk.sh  update_kernel.sh  update_rootfs.sh
